revert: seems like set the padding-bottom to be zero should fix the issue that huge spacing of toolbar

--- a/src/styles/advanced-toolbar.scss
+++ b/src/styles/advanced-toolbar.scss
@@ -55,11 +55,6 @@
 		) !important;
 	}
 }
-body:not(.AT-multirow) {
-	.mobile-toolbar {
-		position: absolute !important;
-	}
-}
 .AT-no-toolbar {
 	.mobile-toolbar {
 		display: none;
